[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["starshina6 <125303949+starshina6@users.noreply.github.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
