[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["starshina6 <125303949+starshina6@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/starshina6/python-project-49"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
]

packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
